<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VostoCustomer</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_stores">StoresActivity</string>
    <string name="title_activity_store_menu">StoreMenu</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="create_vosto_account">Create Vosto Account</string>
    <string name="first_name">First Name</string>
	<string name="last_name">Last Name</string>
    <string name="gender1">Male</string>
    <string name="gender2">Female</string>
    <string name="email">E-mail</string>
	<string name="create_account_button">Create Account</string>
    <string name="save_button">Save</string>
	<string name="welcome_to_vosto">Welcome to Vosto</string>
	<string name="existing_user">Existing User</string>
	<string name="mobile_number">Mobile Number</string>
	<string name="birthdate">Date of Birth</string>
	<string name="choose_birthdate">Choose Birthdate&#8230;</string>
	<string name="user_pin">5-digit pin</string>
	<string name="menu">Menu</string>
	<string name="no_menu_items">No Menu Items</string>
	<string name="tel">Tel: </string>
	<string name="callStore">Call this store</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="cart">Cart</string>
	<string name="options">Options:</string>
	<string name="quantity">Quantity:</string>
	<string name="comments">Comments:</string>
	<string name="yourcart">Your Cart:</string>
	<string name="total">Total:</string>
	<string name="confirmorder">Confirm Order</string>
    <string name="discardorder">Discard Order</string>
    <string name="splashscreen">Splash Screen</string>
    <string name="findbynearestlocation">FIND <i>by nearest location</i></string>
    <string name="searchbyfoodtype">SEARCH <i>by food type</i></string>
    <string name="categories">CATEGORIES</string>
    <string name="filter_button">Filter</string>
    <string name="app_id">317758478337773</string>
    <string name="get_started">To get started, log in using Facebook</string>
</resources>