<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical">
    
    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"  
      >
         
    <TextView
        android:id="@+id/optionsHeading"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/options"
       />
        
    </LinearLayout>
    
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="100sp"
        >
        
         <RadioGroup
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/variantsRadioGroup">
  
	</RadioGroup>
        
    </ScrollView>
    
     <TextView
        android:id="@+id/quantityHeading"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/quantity"
       />
   
    <EditText
    android:id="@+id/txtQuantity"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="number"
    />
    
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/comments"
       />
      
        <EditText
    android:id="@+id/txtComments"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="textMultiLine"
    android:scrollbars="vertical"
    />
    
    
     <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"  
      >
        
          <TextView
        android:id="@+id/addToCartPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
       />
          
          
           <Button
        android:id="@+id/addToCartButtonOK"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        />
           
             <Button
        android:id="@+id/addToCartButtonCancel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        />
    </LinearLayout>
</LinearLayout>