<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/welcomeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_vosto"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:gravity="center_vertical"
        android:layout_marginTop="66dp"
        android:orientation="vertical" >
     
        
                                   
<Button  
    android:id="@+id/buttonNewUser"  
    android:layout_height="wrap_content"  
    android:text="@string/create_account_button"  
    android:onClick="createAccount"  
    android:layout_width="fill_parent">  
</Button> 


<Button  
    android:id="@+id/buttonExistingUser"  
    android:layout_height="wrap_content"  
    android:text="@string/existing_user"  
    android:onClick="existingUser"  
    android:layout_width="fill_parent">  
</Button> 
        
    </LinearLayout>

</RelativeLayout>